force-app/main/default/objects/Delivery__c/Delivery__c.object-meta.xml
<CustomObject>
    <description>The Delivery object tracks delivery assignment and progress for a customer order. As a child of Order, it records the assigned delivery partner Contact, delivery status, and delivery date. Commonly used for delivery tracking, partner assignment, and fulfillment reporting.</description>
    <label>Delivery</label>
    <nameField>
        <label>Delivery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>