force-app/main/default/objects/Delivery__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>The date and time when the delivery was completed or is expected to be completed. Updated by the delivery partner when the order is delivered.</description>
    <label>Delivery Date</label>
    <type>DateTime</type>
</CustomField>