force-app/main/default/objects/Delivery__c/fields/Delivery_Partner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Contact record representing the delivery partner assigned to this delivery. Experience Cloud external delivery partner users are backed by Contact records.</description>
    <label>Delivery Partner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assigned Deliveries</relationshipLabel>
    <relationshipName>Assigned_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>